<project>
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.cavetale.server</groupId>
  <artifactId>server</artifactId>
  <version>0.1-SNAPSHOT</version>

  <name>Server</name>
  <url>https://github.com/StarTux/Server</url>
  <packaging>jar</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <build>
    <finalName>${project.name}</finalName>
    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.2</version>
        <configuration>
          <source>21</source>
          <target>21</target>
          <showDeprecation>true</showDeprecation>
          <showWarnings>true</showWarnings>
          <compilerArgs>
            <arg>-Xlint:unchecked</arg>
          </compilerArgs>
        </configuration>
      </plugin>

    </plugins>
  </build>
  <repositories>

    <!-- Cavetale Repo -->
    <repository>
      <id>cavetale</id>
      <url>https://cavetale.com/jenkins/plugin/repository/everything/</url>
    </repository>

    <!-- Paper Repo -->
    <repository>
      <id>papermc</id>
      <url>https://papermc.io/repo/repository/maven-public/</url>
    </repository>

  </repositories>
  <dependencies>

    <!-- Paper API -->
    <dependency>
      <groupId>io.papermc.paper</groupId>
      <artifactId>paper-api</artifactId>
      <version>1.21.3-R0.1-SNAPSHOT</version> <!-- Paper Version -->
      <scope>provided</scope>
    </dependency>

    <!-- Lombok -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.32</version>
      <scope>provided</scope>
    </dependency>

    <!-- Core -->
    <dependency>
      <groupId>com.cavetale.core</groupId>
      <artifactId>core</artifactId>
      <version>0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>

    <!-- Connect -->
    <dependency>
      <groupId>com.winthier.connect</groupId>
      <artifactId>connect</artifactId>
      <version>0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>

    <!-- Mytems -->
    <dependency>
      <groupId>com.cavetale.mytems</groupId>
      <artifactId>mytems</artifactId>
      <version>0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>

    <!-- SQL -->
    <dependency>
      <groupId>com.winthier.sql</groupId>
      <artifactId>sql</artifactId>
      <version>0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>

    <!-- Title -->
    <dependency>
      <groupId>com.winthier.title</groupId>
      <artifactId>title</artifactId>
      <version>0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>

    <!-- JUnit Testing -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>

  </dependencies>
</project>
